# veritas_rag

./: .env.example  .gitignore  ANTIGRAVITY_BUILD_GUIDE.md  GATE_3_REPORT.md  GOLDEN_SET_TRIAGE_REPORT.md  README.md  VeritasRAG_Project_Context.md  mlflow.db  pyproject.toml  requirements.lock.txt  scratch_out.txt  test_imports.py
.agents/: AGENTS.md
.github/workflows/: tests.yml
configs/: config.yaml  deployment_config.yaml  training_config.yaml
docs/: PROJECT_STATE.md
evaluation/: metrics.py
evaluation/benchmarks/: classifier_probe.json  (+9 more)
scripts/: ask.py  calibrate_threshold.py  diagnose_metal.py  download_corpus.py  fetch_nli_verifier.sh  fetch_phase2_models.sh  fetch_phase2_models_v2.sh  generate_golden_set.py  generate_veritasqa_candidates.py  remap_golden.py  restore_corpus_from_db.py  run_classifier_probe.py  run_classifier_probe_v2.py  run_evaluation.py  run_fixed_ingestion.py  run_gate2_eval.py  run_gate2_eval_v2.py  run_gate3_eval.py  run_gate3_watchdog.sh  run_hotpotqa_ingestion.py  run_ingestion.py
tests/: test_audit_record.py  test_claim_decomposer.py  test_data_leakage.py  test_document_parser.py  test_hybrid_retriever.py  test_indexer.py  test_llm_client.py  test_metadata_tagger.py  test_metrics.py  test_nli_verifier.py  test_query_classifier.py  test_query_pipeline.py  test_reranker.py  test_selective_regen.py  test_semantic_chunker.py  test_span_aligner.py  test_span_overlap.py
training/: generate_domain_nli.py  generate_legal_classifier_data.py  generate_training_data.py  train_nli_verifier.py  train_query_classifier.py  train_reranker.py
(+28 files in other folders)
