[project]
name = "veritas-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers==2.7.0",
    "faiss-cpu==1.9.0.post1",
    "rank-bm25==0.2.2",
    "torch>=2.6.0",
    "transformers>=4.40.2",
    "spacy>=3.8.0",
    "pdfplumber==0.11.0",
    "python-docx==1.1.2",
    "beautifulsoup4==4.12.3",
    "duckdb>=0.10.3",
    "pydantic>=2.7.1",
    "pyyaml==6.0.1",
    "numpy>=1.26.4",
    "tqdm==4.66.4",
    "loguru==0.7.2",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "streamlit>=1.35.0",
    "hydra-core==1.3.2",
    "mlflow>=2.12.2",
    "llama-cpp-python",
    "python-dotenv",
    "slowapi",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest==8.2.0", "pytest-cov==5.0.0", "black==24.4.2", "ruff==0.4.4", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
